INTYG-3617: Utseende och texter för makulera.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -123,7 +123,7 @@
                   ng-click="makulera(viewState.intygModel)"
                   wc-check-vardenhet
                   vardenhet="{{viewState.enhetsId}}"
-                  uib-popover="Öppnar ett fönster där du kan gå vidare och makulera intyget."
+                  uib-popover="Om intyget innehåller ett allvarligt fel, exempelvis utfärdat på fel patient, kan du makulera intyget. Ett fönster öppnas där du kan gå vidare och makulera intyget."
                   popover-trigger="mouseenter"
                   popover-popup-delay="300"
                   popover-append-to-body="true"
