DEVENV: Protractor test fix - Lagt tillbaka id på makuleraBtn som tagits bort.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -118,6 +118,7 @@
                   wc-authority="MAKULERA_INTYG"
                   request-origin="!UTHOPP"
                   intygstyp="{{intygstyp}}"
+                  id="makuleraBtn"
                   class="btn btn-default pull-right"
                   ng-if="!makuleratIntyg()"
                   ng-click="makulera(viewState.intygModel)"
