INTYG-3753: Flyttade logik från template som var relevant för showPrintBtn

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -54,7 +54,7 @@
             <span message key="common.button.save.as.pdf"></span>
           </button>
           <div id="downloadprintemployer" intygstyp="{{intygstyp}}" style="display:inline;">
-            <div class="btn-group" ng-if="showEmployerPrintBtn() && !makuleratIntyg()">
+            <div class="btn-group" ng-if="showEmployerPrintBtn()">
               <button type="button"
                       id="intyg-header-dropdown-select-pdf-type"
                       class="btn btn-info dropdown-toggle"
