--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -46,7 +46,7 @@
 
       <!-- Vårdadmin kan notifiera via statusuppdatering för SMI-intyg -->
       <div wc-authority="NOTIFIERING_UTKAST" intygstyp="{{viewState.common.intyg.type}}">
-        <button ng-if="!viewState.klarForSigneraDatum" type="button" id="statusuppdateringBtn" class="btn btn-success" ng-click="notifieraUtkast()">
+        <button ng-if="!viewState.klarForSigneraDatum" type="button" id="markeraKlartForSigneraButton" class="btn btn-success" ng-click="notifieraUtkast()">
           <span message key="draft.notifyready.button"></span>
         </button>
         <div ng-if="viewState.klarForSigneraDatum">
