INTYG-3619: Första version av ersätt hela kedjan

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -115,6 +115,22 @@
             Förnya
           </button>
           <button type="button"
+                  wc-authority="KOPIERA_INTYG"
+                  request-origin="!UTHOPP"
+                  intygstyp="{{intygstyp}}"
+                  id="ersattBtn"
+                  class="btn btn-info"
+                  ng-if="showErsattButton()"
+                  ng-click="ersatt(viewState.intygModel)"
+                  uib-popover="{{ersattBtnTooltipText}}"
+                  popover-trigger="mouseenter"
+                  popover-popup-delay="300"
+                  popover-append-to-body="true"
+                  popover-placement="auto top">
+            Ersätt
+          </button>
+
+          <button type="button"
                   wc-authority="MAKULERA_INTYG"
                   request-origin="!UTHOPP"
                   intygstyp="{{intygstyp}}"
