INTYG-3619: Lagt till ersatt-varningsmeddelande samt använder nya replacedByRelation property från backend.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -21,6 +21,8 @@
     </div>
   </div>
 
+  <div wc-intyg-replaced-message></div>
+
   <div ng-show="!viewState.common.activeErrorMessageKey" id="intyg-vy-laddad">
     <div>
       <div class="form-group">
