INTYG-3619: Lägger till privilegie ERSATTA_INTYG

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -117,7 +117,7 @@
             Förnya
           </button>
           <button type="button"
-                  wc-authority="KOPIERA_INTYG"
+                  wc-authority="ERSATTA_INTYG"
                   request-origin="!UTHOPP"
                   intygstyp="{{intygstyp}}"
                   id="ersattBtn"
