INTYG-3752: Code review changes
Changed field names to klartForSignering, from several similar variants.
Changes includes: the database column name (now named KLART_FOR_SIGNERING_DATUM),
java/javascript DTOs, java database entities, frontend model.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -46,10 +46,10 @@
 
       <!-- Vårdadmin kan notifiera via statusuppdatering för SMI-intyg -->
       <div wc-authority="NOTIFIERING_UTKAST" intygstyp="{{viewState.common.intyg.type}}">
-        <button ng-if="!viewState.klarForSigneraDatum" type="button" id="markeraKlartForSigneraButton" class="btn btn-success" ng-click="notifieraUtkast()">
+        <button ng-if="!viewState.klartForSigneringDatum" type="button" id="markeraKlartForSigneringButton" class="btn btn-success" ng-click="notifieraUtkast()">
           <span message key="draft.notifyready.button"></span>
         </button>
-        <div ng-if="viewState.klarForSigneraDatum">
+        <div ng-if="viewState.klartForSigneringDatum">
           <span class="glyphicon glyphicon-check ng-scope"></span>
           <span id="draft-marked-ready-text" message key="draft.notifyready.text"></span>
         </div>
