INTYG-3767: Lade till tooltip z klass på makuleraknappen.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -146,7 +146,8 @@
                   popover-trigger="mouseenter"
                   popover-popup-delay="300"
                   popover-append-to-body="true"
-                  popover-placement="auto top">
+                  popover-placement="auto top"
+                  popover-class="z-low">
             Makulera
           </button>
         </div>
