INTYG-3757: ändrade h till timmar.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
@@ -16,7 +16,7 @@
         <input class="form-control hoursPerWeek" type="text" ng-model="viewstate.hoursPerWeek"
                ng-change="viewstate.updateHoursPerWeek()"
                ng-blur="validate()"
-               maxlength="4"> h/vecka
+               maxlength="4"> timmar/vecka
         <span wc-help-mark field-help-text="common.sit.help.sjukskrivning.hoursperweek"></span>
       </label>
     </div>
