INTYG-1620: Checkstyle samt message keys

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -16,7 +16,7 @@
 
       <!-- Om personen har loggat in med BANK ID skall vi visa en liten extra text -->
       <p ng-if="user.authenticationMethod === 'BANK_ID'">
-        <span>Om ditt BankID säkerhetsprogram inte öppnas automatiskt kan du behöva starta det själv.</span>
+        <span message key="common.modal.label.signing.open.bankid"></span>
       </p>
     </div>
 
