--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/gui/miSpinner.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/gui/miSpinner.directive.html
@@ -1,7 +1,7 @@
 <div>
-  <div ng-show="showSpinner" style="text-align: center; padding: 20px;">
-    <img aria-labelledby="loading-message" src="/img/ajax-loader.gif" style="text-align: center;" />
-    <p id="loading-message" style="text-align: center; color: #64ABC0; margin-top: 20px;">
+  <div ng-show="showSpinner" class="mi-spinner-directive">
+    <i class="icon icon-spinner animate-spin"></i>
+    <p id="loading-message">
       <strong><span message key="{{ label }}"></span></strong>
     </p>
   </div>
