INTYG-3620: User operations on complemented intyg disabled

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -21,7 +21,15 @@
     </div>
   </div>
 
-  <div wc-intyg-replaced-message></div>
+  <div wc-intyg-replaced-message="'ersatts av'"
+       view-state="viewState"
+       relation="viewState.common.intygProperties.replacedByRelation">
+  </div>
+
+  <div wc-intyg-replaced-message="'kompletterats av'"
+       view-state="viewState"
+       relation="viewState.common.intygProperties.complementedByRelation">
+  </div>
 
   <div ng-show="!viewState.common.activeErrorMessageKey" id="intyg-vy-laddad">
     <div>
