--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygReplacedMessage.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygReplacedMessage.directive.html
@@ -2,7 +2,7 @@
   <div id="wc-intyg-replaced-message" class="form-group" ng-if="showMessage">
     <div class="alert alert-warning alert-column" id="intyg-already-replaced-warning">
       <i class="glyphicon glyphicon-exclamation-sign"></i>
-      <span>Intyget har ersatts av <a href ng-click="gotoIntyg($event)">detta intyg</a></span>
+      <span>Intyget har {{message}} <a href ng-click="gotoIntyg($event)">detta intyg</a></span>
     </div>
   </div>
 </div>
