INTYG-3664: Diverse för Webcert och dynamiska länkar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeaderAboutDialog.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeaderAboutDialog.template.html
@@ -33,7 +33,7 @@
         SITHS-kortet är en personlig legitimation som inte får lånas ut. Både kort och koder ska förvaras på ett
         säkert sätt. </p>
       <p>Om du har problem med att logga in med ditt kort eller vill veta vilken behörighet du har så kan du testa det
-        här: https://test.siths.se/</p>
+        här: <span dynamiclink key="testSiths"></span></p>
       <p>Om du förlorat ditt kort eller misstänker att någon obehörig fått kännedom om dina koder ska kortet spärras
         omedelbart. Om ditt kort har spärrats eller om du glömt någon av koderna ska du vända dig till din
         SITHS-kortadministratör.</p>
@@ -103,8 +103,7 @@
       <ul>
         <li>Frågor som gäller inloggning: kontakta din SITHS-kortadministratör.</li>
         <li>Tekniska frågor om Webcert: hanteras i första hand av den lokala IT-avdelningen. Om din lokala
-          IT-avdelning inte kan hitta felet ska de kontakta <a href="http://www.inera.se/felanmalan" target="_blank">Ineras
-            Nationell kundservice</a>. Frågor om ifyllnaden av intyg: i intyget finns hjälpfunktioner för stöd hur
+          IT-avdelning inte kan hitta felet ska de kontakta <span dynamiclink key="ineraKundserviceAnmalFel"></span>. Frågor om ifyllnaden av intyg: i intyget finns hjälpfunktioner för stöd hur
           intyget ska fyllas i.
         </li>
       </ul>
@@ -151,9 +150,7 @@
           det
           motiveras.
           <br><br>
-          För ytterligare information om hur FMB ska användas <a
-              href="http://www.socialstyrelsen.se/riktlinjer/forsakringsmedicinsktbeslutsstod/omforsakringsmedicinsktbeslutsstod/saskabeslutsstodetanvandas"
-              target="_blank">klicka här</a>.
+          För ytterligare information om hur FMB ska användas <span dynamiclink key="socialstyrelsenFmbAnvandas"></span>.
 
         </p>
 
