INTYG-3620: Fixed codequality errors and problems found during code review

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygRelatedOtherIntygMessage.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygRelatedOtherIntygMessage.directive.html
@@ -2,7 +2,7 @@
   <div id="wc-intyg-related-other-intyg-message" class="form-group" ng-if="showMessage">
     <div class="alert alert-warning alert-column" id="intyg-already-replaced-warning">
       <i class="glyphicon glyphicon-exclamation-sign"></i>
-      <span>Intyget har {{message}} <a href ng-click="gotoIntyg($event)">detta intyg</a></span>
+      <span>Intyget har {{textBeforeRelation}} <a href ng-click="gotoIntyg($event)">detta intyg</a></span>
     </div>
   </div>
 </div>
