--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/panel/svar/arendePanelSvar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/panel/svar/arendePanelSvar.directive.html
@@ -97,7 +97,7 @@
                     ng-show="arendeSvar.answerKompletteringWithText"
                     id="abortAnswerBtn-{{qa.internReferens}}"> Avbryt
             </button>
-            <button type="button" class="btn btn-info" ng-click="deleteArendeDraft()"
+            <button type="button" class="btn btn-info" ng-click="deleteArendeDraft()" ng-show="isAnswerAllowed()"
                     ng-disabled="!arendeSvar.meddelande"> Radera påbörjat svar
             </button>
           </div>
