INTYG-3894: Lagt till Datum som rubrik på frågan 'Grund för medicinskt underlag'

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
@@ -6,7 +6,7 @@
   <table class="">
     <tr class="underlagRow">
       <th style="width: 35%;"><span dynamic-label key="{{to.typLabel}}.RBK"></span> <span class="required">*</span> <span wc-help-mark field-dynamic-help-text="{{to.typLabel}}.HLP"></span></th>
-      <th><span dynamic-label key="{{to.datumLabel}}.RBK"></span> <span class="required">*</span> <span wc-help-mark field-dynamic-help-text="{{to.datumLabel}}.HLP"></span></th>
+      <th><span>Datum </span> <span class="required">*</span> <span wc-help-mark field-dynamic-help-text="{{to.datumLabel}}.HLP"></span></th>
       <th><span dynamic-label key="{{to.hamtasFranLabel}}.RBK"></span> <span class="required">*</span> <span wc-help-mark field-dynamic-help-text="{{to.hamtasFranLabel}}.HLP"></span></th>
     </tr>
     <tr class="underlagRow" ng-repeat="underlag in model.underlag">
